# BattagliaNavale_ProgettoFinale

./: CMakeLists.txt
lib/: Ai.h  Game.h  Game.hpp  Human.h  Player.h  Replay.h  ReplayGame.h
lib/board/: Attack.h  Board.h  Defense.h
lib/def/: Ship.h  Utility.h
lib/player/: Ai.h  Human.h  Player.h  Replay.h
lib/ship/: Battleship.h  Ship.h  Submarine.h  Support.h
src/: Battaglianavale.cpp  ReplayMain.cpp  battaglia_navale.cpp  battaglianavale.cpp  replay.cpp
src/infra/: Ai.cpp  Game.cpp  Human.cpp  Player.cpp  Replay.cpp  ReplayGame.cpp
src/infra/board/: Attack.cpp  Board.cpp  Defense.cpp
src/infra/player/: Ai.cpp  Human.cpp  Player.cpp  Replay.cpp
src/infra/ship/: Battleship.cpp  Ship.cpp  Submarine.cpp  Support.cpp
src/ship/: Battleship.cpp  Submarine.cpp  Support.cpp
